--- a/generators/react-native/templates/app/modules/entities/entity-detail-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/entities/entity-detail-screen.js.ejs
@@ -1,8 +1,8 @@
 import React from 'react'
-import { ActivityIndicator, ScrollView, Text, <% if (fieldsContainImageBlob) { %>Image, <% } %>View } from 'react-native';
+import { ActivityIndicator, ScrollView, Text, <% if (anyFieldHasImageContentType) { %>Image, <% } %>View } from 'react-native';
 import { connect } from 'react-redux'
 import { useFocusEffect } from '@react-navigation/native';
-<%_ if (fieldsContainLocalDate) { _%>
+<%_ if (anyFieldIsLocalDate) { _%>
 import { convertLocalDateToString } from '../../../shared/util/date-transforms'
 <%_ } _%>
 
