--- a/generators/app/templates/test/setup.js.ejs
+++ b/generators/app/templates/test/setup.js.ejs
@@ -1,5 +1,7 @@
 import mockAsyncStorage from '@react-native-async-storage/async-storage/jest/async-storage-mock';
 
+jest.retryTimes(3, { logErrorsBeforeRetry: true });
+
 // Mock your external modules here if needed
 jest
   .mock('@react-native-async-storage/async-storage', () => mockAsyncStorage)
