adjust detox config

--- a/generators/app/templates/.detoxrc.json.ejs
+++ b/generators/app/templates/.detoxrc.json.ejs
@@ -1,4 +1,7 @@
 {
+  "logger", {
+    "level": "info"
+  },
   "configurations": {
     "ios.sim.release": {
       "device": "simulator",
@@ -32,6 +35,7 @@
     }
   },
   "testRunner": {
+    "retries": 2,
     "$0": "jest",
     "args": {
       "config": "./e2e/config.json"
