--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -4,6 +4,7 @@ const password = process.env.E2E_PASSWORD || 'user';
 const expoPublishedUrl = process.env.E2E_EXPO_URL || 'exp://localhost:8081';
 
 const DEFAULT_VISIBLE_TIMEOUT = 10000;
+const DEFAULT_RELOAD_AWAIT = 10000;
 
 const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
 
@@ -109,7 +110,7 @@ const waitForElementToBeVisibleById = async (elementId, timeout = DEFAULT_VISIBL
 }
 
 const closeDeveloperMenu = async () => {
-  await wait(3000);
+  await wait(DEFAULT_RELOAD_AWAIT);
 
   await waitFor(element(by.text('Continue')))
     .toBeVisible()
@@ -121,7 +122,7 @@ const closeDeveloperMenu = async () => {
     .withTimeout(DEFAULT_VISIBLE_TIMEOUT);
   await element(by.text('Reload')).tap();
 
-  await wait(3000);
+  await wait(DEFAULT_RELOAD_AWAIT);
 };
 
 const reloadApp = async (bailOnFailure) => {
