--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -4,7 +4,7 @@ const password = process.env.E2E_PASSWORD || 'user';
 const expoPublishedUrl = process.env.E2E_EXPO_URL || 'exp://localhost:8081';
 
 const DEFAULT_VISIBLE_TIMEOUT = 10000;
-const DEFAULT_RELOAD_AWAIT = 10000;
+const DEFAULT_RELOAD_AWAIT = 3000;
 
 const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
 
@@ -14,7 +14,7 @@ const waitThenTapButton = async (buttonId, ms = 1000) => {
 };
 
 const openAndTapDrawerMenuItemByLabel = async (label) => {
-  await waitForElementToBeVisibleById('drawerButtonWrapper');
+  await waitForElementToBeVisibleById('drawerButtonWrapper', DEFAULT_VISIBLE_TIMEOUT * 2);
   await wait(2000);
   // matching the drawer button is flaky, so open it with a swipe from the left
   await element(by.id('drawerButtonWrapper')).atIndex(0).swipe('right', 'fast', 0.7, 0.01);
@@ -114,7 +114,7 @@ const closeDeveloperMenu = async () => {
 
   await waitFor(element(by.text('Continue')))
     .toBeVisible()
-    .withTimeout(DEFAULT_VISIBLE_TIMEOUT * 2);
+    .withTimeout(DEFAULT_VISIBLE_TIMEOUT);
   await element(by.text('Continue')).tap();
 
   await waitFor(element(by.text('Reload')))
@@ -142,7 +142,7 @@ const reloadApp = async (bailOnFailure) => {
     await device.launchApp({ url: expoPublishedUrl, newInstance: true, launchArgs: { detoxEnableSynchronization: false } });
     await closeDeveloperMenu();
   } catch (e) {
-    console.warn('Reloading app failed, retrying once');
+    console.warn('Reloading app failed, retrying');
     console.warn(e);
   }
 };
