--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -16,8 +16,7 @@ const waitThenTapButton = async (buttonId, ms = 1000) => {
 const openAndTapDrawerMenuItemByLabel = async (label) => {
   await waitForElementToBeVisibleById('drawerButtonWrapper', DEFAULT_VISIBLE_TIMEOUT * 2);
   await wait(2000);
-  // matching the drawer button is flaky, so open it with a swipe from the left
-  await element(by.id('drawerButtonWrapper')).atIndex(0).swipe('right', 'fast', 0.7, 0.01);
+  await element(by.id('drawerButtonWrapper')).atIndex(0).tap();
   await waitForElementToBeVisibleById('drawerContentScrollView');
   await tapFirstElementByLabel(label);
 };
