stabilize iOS ci (#1613)
* don't update root package.json

It should follow generate-blueprint versions.

* retry jest tests

* run iOS test on main

* adjust detox config

* Update .detoxrc.json.ejs

* Update setup.js.ejs

* Update package.json.ejs

* Update .detoxrc.json.ejs

* increase wait

* Update utils.js.ejs

* Update utils.js.ejs

* Update utils.js.ejs

* Update utils.js.ejs

* Update run-detox-tests.sh

* Update run-detox-tests.sh

* Update utils.js.ejs

* Update ios.yml

* Revert "Update ios.yml"

This reverts commit 172edaebfe83bd7762f0f2fc71bd0c10e79d9d6b.

* Revert "Update utils.js.ejs"

This reverts commit 94193cf123769a9ebed372fde1a1ca5d66e8c94d.

* Revert "Revert "Update ios.yml""

This reverts commit b4f5915d00a257ff211fd18810b31d7404ad6d9f.

* Revert "Update run-detox-tests.sh"

This reverts commit 81cd79032a6c1a57f9689d55b956ee9f94e7c6f3.

--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -3,6 +3,9 @@ const username = process.env.E2E_USERNAME || 'user';
 const password = process.env.E2E_PASSWORD || 'user';
 const expoPublishedUrl = process.env.E2E_EXPO_URL || 'exp://localhost:8081';
 
+const DEFAULT_VISIBLE_TIMEOUT = 10000;
+const DEFAULT_RELOAD_AWAIT = 3000;
+
 const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
 
 const waitThenTapButton = async (buttonId, ms = 1000) => {
@@ -11,6 +14,7 @@ const waitThenTapButton = async (buttonId, ms = 1000) => {
 };
 
 const openAndTapDrawerMenuItemByLabel = async (label) => {
+  await waitForElementToBeVisibleById('drawerButtonWrapper', DEFAULT_VISIBLE_TIMEOUT * 2);
   await wait(2000);
   // matching the drawer button is flaky, so open it with a swipe from the left
   await element(by.id('drawerButtonWrapper')).atIndex(0).swipe('right', 'fast', 0.7, 0.01);
@@ -97,28 +101,28 @@ const tapFirstElementByLabel = async (label) => {
   }
 };
 
-const waitForElementToBeVisibleByLabel = async (elementLabel, timeout = 5000) => {
+const waitForElementToBeVisibleByLabel = async (elementLabel, timeout = DEFAULT_VISIBLE_TIMEOUT) => {
   await waitFor(element(by.label(elementLabel))).toBeVisible().withTimeout(timeout);
 }
 
-const waitForElementToBeVisibleById = async (elementId, timeout = 5000) => {
+const waitForElementToBeVisibleById = async (elementId, timeout = DEFAULT_VISIBLE_TIMEOUT) => {
   await waitFor(element(by.id(elementId))).toBeVisible().withTimeout(timeout);
 }
 
 const closeDeveloperMenu = async () => {
-  await wait(3000);
+  await wait(DEFAULT_RELOAD_AWAIT);
 
   await waitFor(element(by.text('Continue')))
     .toBeVisible()
-    .withTimeout(3000);
+    .withTimeout(DEFAULT_VISIBLE_TIMEOUT);
   await element(by.text('Continue')).tap();
 
   await waitFor(element(by.text('Reload')))
     .toBeVisible()
-    .withTimeout(3000);
+    .withTimeout(DEFAULT_VISIBLE_TIMEOUT);
   await element(by.text('Reload')).tap();
 
-  await wait(3000);
+  await wait(DEFAULT_RELOAD_AWAIT);
 };
 
 const reloadApp = async (bailOnFailure) => {
@@ -138,7 +142,7 @@ const reloadApp = async (bailOnFailure) => {
     await device.launchApp({ url: expoPublishedUrl, newInstance: true, launchArgs: { detoxEnableSynchronization: false } });
     await closeDeveloperMenu();
   } catch (e) {
-    console.warn('Reloading app failed, retrying once');
+    console.warn('Reloading app failed, retrying');
     console.warn(e);
   }
 };
