--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -139,7 +139,14 @@ const reloadApp = async (bailOnFailure) => {
         `plutil -replace restrictedBool.allowPasswordAutoFill.value -bool NO ~/Library/Developer/CoreSimulator/Devices/${device.id}/data/Library/UserConfigurationProfiles/PublicInfo/PublicEffectiveUserSettings.plist`,
       );
     }
-    await device.launchApp({ url: expoPublishedUrl, newInstance: true, launchArgs: { detoxEnableSynchronization: false } });
+    await device.launchApp({
+      url: expoPublishedUrl,
+      newInstance: true,
+      launchArgs: {
+        detoxEnableSynchronization: false,
+        EXKernelDisableNuxDefaultsKey: true,
+      },
+    });
     await closeDeveloperMenu();
   } catch (e) {
     console.warn('Reloading app failed, retrying');
