--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -51,9 +51,9 @@ const loginAsUser = async () => {
   await element(by.id('loginScreenPassword')).replaceText(password);
   await waitThenTapButton('loginScreenLoginButton');
   try {
-    await waitForElementToBeVisibleById('homeScreen')
+    await waitForElementToBeVisibleById('authDisplayTrue')
   } catch (e) {
-    throw new Error('Logging in failed. Check backend status or credentials.');
+    throw new Error(`Logging in failed. Check backend status or credentials. ${e}`);
   }
 };
 
