--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -114,7 +114,7 @@ const closeDeveloperMenu = async () => {
 
   await waitFor(element(by.text('Continue')))
     .toBeVisible()
-    .withTimeout(DEFAULT_VISIBLE_TIMEOUT);
+    .withTimeout(DEFAULT_VISIBLE_TIMEOUT * 2);
   await element(by.text('Continue')).tap();
 
   await waitFor(element(by.text('Reload')))
