--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -147,7 +147,7 @@ const reloadApp = async (bailOnFailure) => {
         EXKernelDisableNuxDefaultsKey: true,
       },
     });
-    await closeDeveloperMenu();
+    // await closeDeveloperMenu();
   } catch (e) {
     console.warn('Reloading app failed, retrying');
     console.warn(e);
