convert generators/react-native/templates/.gitignore to partial template

--- a/generators/react-native/templates/.gitignore.jhi.react-native.ejs
+++ b/generators/react-native/templates/.gitignore.jhi.react-native.ejs
@@ -1,11 +1,10 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
+<&_ if (!fragment.section) { -&>
+######################
+# React Native
+######################
 
 # Expo
 .expo/
-dist/
 web-build/
 
 # Native
@@ -25,7 +24,6 @@ yarn-debug.*
 yarn-error.*
 
 # macOS
-.DS_Store
 *.pem
 
 # local env files
@@ -33,3 +31,4 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+<&_ } -&>
