--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -83,6 +83,7 @@
     "@babel/core": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-community/eslint-config": "REPLACE_WITH_VERSION",
     "@react-native-community/cli-server-api": "EXPO_REPLACE_WITH_VERSION",
+    "@redux-devtools/extension": "REPLACE_WITH_VERSION",
     "@storybook/addons": "REPLACE_WITH_VERSION",
     "@storybook/react-native": "REPLACE_WITH_VERSION",
     "@storybook/theming": "REPLACE_WITH_VERSION",
@@ -111,7 +112,6 @@
     "path-exists": "REPLACE_WITH_VERSION",
     "prettier": "REPLACE_WITH_VERSION",
     "react-test-renderer": "REPLACE_WITH_VERSION",
-    "redux-devtools-extension": "REPLACE_WITH_VERSION",
     "resolve": "REPLACE_WITH_VERSION",
     "rimraf": "REPLACE_WITH_VERSION",
     "tapable": "REPLACE_WITH_VERSION",
