--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "EXPO_REPLACE_WITH_VERSION",
+    "@expo/metro-runtime": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-async-storage/async-storage": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-community/datetimepicker": "EXPO_REPLACE_WITH_VERSION",
     "@react-native-masked-view/masked-view": "EXPO_REPLACE_WITH_VERSION",
