--- a/generators/react-native/templates/package.json.ejs
+++ b/generators/react-native/templates/package.json.ejs
@@ -2,6 +2,10 @@
   "name": "<%= reactNativeAppNameKebabCase %>",
   "version": "0.0.1",
   "scripts": {
+<%_ if (detox) { _%>
+    "e2e:build:ios": "detox build --configuration ios.sim.release",
+    "e2e:test:ios": "detox test --configuration ios.sim.release --retries 3",
+<%_ } _%>
     "android": "expo start --android",
     "ios": "expo start --ios",
     "test:watch": "jest --watch",
@@ -15,10 +19,6 @@
     "build:web": "expo export",
 <%_ if (!skipCommitHook) { _%>
     "precommit": "lint-staged",
-<%_ } _%>
-<%_ if (detox) { _%>
-    "start:e2e": "expo start --no-dev --minify",
-    "test:e2e": "./e2e/scripts/setup.sh && detox test --configuration ios.sim.release --retries 3",
 <%_ } _%>
     "postinstall": "patch-package",
     "prettier": "prettier --write \"{,.,**/,.jhipster/**/}*.{md,json,yml,js,ts,tsx}\"",
