--- a/generators/react-native/templates/app/shared/components/form/jhi-form-field.story.js.ejs
+++ b/generators/react-native/templates/app/shared/components/form/jhi-form-field.story.js.ejs
@@ -1,5 +1,5 @@
 import React, { createRef } from 'react';
-import { storiesOf } from '@storybook/react-native';
+import { storiesOf } from '@storybook/react-native/V6';
 import { View, StyleSheet, Text } from 'react-native';
 import FormButton from './jhi-form-button';
 import FormField from './jhi-form-field';
