--- a/generators/react-native/templates/app/shared/components/alert-message/alert-message.story.js.ejs
+++ b/generators/react-native/templates/app/shared/components/alert-message/alert-message.story.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { storiesOf } from '@storybook/react-native'
+import { storiesOf } from '@storybook/react-native/V6'
 import { StyleSheet } from 'react-native'
 
 import AlertMessage from './alert-message'
