--- a/generators/react-native/templates/app/shared/components/rounded-button/rounded-button.story.js.ejs
+++ b/generators/react-native/templates/app/shared/components/rounded-button/rounded-button.story.js.ejs
@@ -1,5 +1,5 @@
 import React from 'react'
-import { storiesOf } from '@storybook/react-native'
+import { storiesOf } from '@storybook/react-native/V6'
 
 import RoundedButton from './rounded-button'
 
