--- a/generators/react-native/templates/app/shared/components/search-bar/search-bar.story.js.ejs
+++ b/generators/react-native/templates/app/shared/components/search-bar/search-bar.story.js.ejs
@@ -1,6 +1,6 @@
 import React from 'react'
 import { StyleSheet, View } from 'react-native'
-import { storiesOf } from '@storybook/react-native'
+import { storiesOf } from '@storybook/react-native/V6'
 
 import SearchBar from './search-bar'
 
