--- a/generators/react-native/templates/App.js.ejs
+++ b/generators/react-native/templates/App.js.ejs
@@ -1,5 +1,6 @@
 import * as React from 'react';
 import { Provider } from 'react-redux';
+import { registerRootComponent } from 'expo';
 import createStore from './app/shared/reducers';
 import * as SplashScreen from 'expo-splash-screen';
 
@@ -7,7 +8,7 @@ import NavContainer from './app/navigation/nav-container';
 
 const store = createStore();
 
-export default function App() {
+function App() {
   // prevent the splashscreen from disappearing until the redux store is completely ready (hidden in nav-container.js)
   const [displayApp, setDisplayApp] = React.useState(false);
   React.useEffect(() => {
@@ -24,3 +25,5 @@ export default function App() {
     </Provider>
   ) : null;
 }
+
+export default registerRootComponent(App);
