--- a/generators/react-native/templates/e2e/utils.js.ejs
+++ b/generators/react-native/templates/e2e/utils.js.ejs
@@ -143,7 +143,7 @@ const reloadApp = async (bailOnFailure) => {
       url: expoPublishedUrl,
       newInstance: true,
       launchArgs: {
-        detoxEnableSynchronization: false,
+        // detoxEnableSynchronization: false,
         // Don't show developer menu.
         EXKernelDisableNuxDefaultsKey: true,
       },
