adjust to @storybook/react-native

--- a/generators/react-native/templates/storybook/index.js.ejs
+++ b/generators/react-native/templates/storybook/index.js.ejs
@@ -1,4 +1,4 @@
-import { getStorybookUI, configure } from '@storybook/react-native'
+import { getStorybookUI, configure } from '@storybook/react-native/V6'
 import { View } from 'react-native'
 import AsyncStorage from '@react-native-async-storage/async-storage';
 import AppConfig from '../app/config/app-config';
