--- a/generators/react-native/templates/app/modules/login/login.utils.ts.ejs
+++ b/generators/react-native/templates/app/modules/login/login.utils.ts.ejs
@@ -1,5 +1,5 @@
 import { Platform } from 'react-native';
-import { AuthRequest, AuthSessionResult, DiscoveryDocument, makeRedirectUri } from "expo-auth-session";
+import { AuthRequest, AuthSessionResult, DiscoveryDocument, makeRedirectUri } from 'expo-auth-session';
 import * as AuthSession from 'expo-auth-session';
 import * as WebBrowser from 'expo-web-browser';
 import * as Linking from 'expo-linking';
