--- a/generators/react-native/templates/App.js.ejs
+++ b/generators/react-native/templates/App.js.ejs
@@ -1,14 +1,14 @@
 import * as React from 'react';
 import { Provider } from 'react-redux';
-import { registerRootComponent } from 'expo';
 import createStore from './app/shared/reducers';
 import * as SplashScreen from 'expo-splash-screen';
+import 'setimmediate';
 
 import NavContainer from './app/navigation/nav-container';
 
 const store = createStore();
 
-function App() {
+export default function App() {
   // prevent the splashscreen from disappearing until the redux store is completely ready (hidden in nav-container.js)
   const [displayApp, setDisplayApp] = React.useState(false);
   React.useEffect(() => {
@@ -25,5 +25,3 @@ function App() {
     </Provider>
   ) : null;
 }
-
-export default registerRootComponent(App);
