Change Linking.makeURL to Linking.createURI

--- a/generators/react-native/templates/app/navigation/nav-container.js.ejs
+++ b/generators/react-native/templates/app/navigation/nav-container.js.ejs
@@ -108,7 +108,7 @@ export const getDrawerRoutes = () => {
 };
 
 const linking = {
-  prefixes: ['rnapp://', Linking.makeUrl('/')],
+  prefixes: ['rnapp://', Linking.createURL('/')],
   config: {
     initialRouteName: 'Home',
     screens: {
