--- a/generators/react-native/templates/app/modules/home/home-screen.js.ejs
+++ b/generators/react-native/templates/app/modules/home/home-screen.js.ejs
@@ -20,13 +20,13 @@ function HomeScreen(props) {
         {account && account.login ? (
           <View style={[styles.authContainer, styles.authContainerTrue]} testID="authDisplayTrue">
             <Text style={styles.authText}>
-              <Ionicons name="checkmark-circle" size={22} color={'white'} /> You are signed in as {account.login}
+              <Ionicons name="checkmark-circle" size={22} color={'white'} style={{ position: 'absolute', marginLeft: -20 }} /> You are signed in as {account.login}
             </Text>
           </View>
         ) : (
           <View style={[styles.authContainer, styles.authContainerFalse]} testID="authDisplayFalse">
             <Text style={styles.authText}>
-              <Ionicons name="information-circle" size={22} color={'white'} /> You are not signed in.
+              <Ionicons name="information-circle" size={22} color={'white'} style={{ position: 'absolute', marginLeft: -20 }} /> You are not signed in.
             </Text>
           </View>
         )}
