--- a/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
+++ b/generators/react-native/templates/e2e/entities/_entityFile_.spec.js.ejs
@@ -1,5 +1,5 @@
 <%_ if (anyFieldIsDateDerived) { _%>
-const jestExpect = require('expect');
+const { expect: jestExpect } = require('expect');
 <%_ } _%>
 const {
     reloadApp,
@@ -137,10 +137,10 @@ describe<%- authenticationTypeOauth2 ? '.skip' : '' %>('<%= entityNameCapitalize
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= createFakeData[field.fieldName] %>')
       <%_ } else if (formFieldType === 'date') { _%>
     const <%= field.fieldName %>CreateAttributes = await element(by.id('<%= field.fieldName %>')).getAttributes();
-    expect(Date.parse(<%= field.fieldName %>CreateAttributes.label)).toEqual(Date.parse('<%= new Date(createFakeData[field.fieldName]).toCustomLocalDate() %>'));
+    jestExpect(Date.parse(<%= field.fieldName %>CreateAttributes.label)).toEqual(Date.parse('<%= new Date(createFakeData[field.fieldName]).toCustomLocalDate() %>'));
       <%_ } else if (formFieldType === 'datetime') { _%>
     const <%= field.fieldName %>CreateAttributes = await element(by.id('<%= field.fieldName %>')).getAttributes();
-    expect(Date.parse(<%= field.fieldName %>CreateAttributes.label)).toEqual(Date.parse('<%= new Date(createFakeData[field.fieldName]).toFullISOString() %>'));
+    jestExpect(Date.parse(<%= field.fieldName %>CreateAttributes.label)).toEqual(Date.parse('<%= new Date(createFakeData[field.fieldName]).toFullISOString() %>'));
       <%_ } else if (formFieldType === 'boolean') { _%>
     await expect(element(by.id('<%= field.fieldName %>'))).toHaveLabel('<%= createFakeData[field.fieldName] %>')
       <%_ } else if (formFieldType === 'select-one') { _%>
